library/autodiff/tests/ui/wrong_mode.stderr
error: should be forward or reverse
 --> tests/ui/wrong_mode.rs:3:19
  |
3 | #[autodiff(d_sin, WrongMode)]
  |                   ^^^^^^^^^
  |
  = help: `#[autodiff]` modes should be either forward or reverse
